# advent_of_code

./: README.md
2021/day1/: README.md  problem.md
2021/day2/: promlem.md
2022/day10/: main.c
2022/day11/: main.c
2022/day4/: .gitignore  main.c
2022/day5/: .gitignore  main.c
2024/: Cargo.toml  tmp.txt
2024/aoc/: Cargo.toml
2024/aoc/src/: lib.rs
2024/aoc/src/collections/: grid.rs
2024/aoc/src/core/: error.rs  parser.rs
2024/day01/: Cargo.toml
2024/day01/src/: input.rs  main.rs
2024/day02/: Cargo.toml
2024/day02/src/: main.rs
2024/day03/: Cargo.toml
2024/day03/src/: main.rs
2024/day04/: Cargo.toml
2024/day04/src/: main.rs
2024/day05/: Cargo.toml
2024/day05/benches/: bench.rs
2024/day05/src/: lib.rs  main.rs
2024/day06/: Cargo.toml
2024/day06/src/: lib.rs  main.rs
2024/day07/: Cargo.toml
2024/day07/src/: main.rs
2024/day08/: Cargo.toml
2024/day08/benches/: bench.rs
2024/day08/src/: lib.rs  main.rs
2024/day09/: Cargo.toml
2024/day09/src/: main.rs
2024/day10/: Cargo.toml
2024/day10/benches/: bench.rs
2024/day10/src/: lib.rs  main.rs
2024/day11/: Cargo.toml
2024/day11/src/: main.rs
2024/day12/: Cargo.toml
2024/day12/src/: main.rs
2024/day13/: Cargo.toml
2024/day13/src/: main.rs
2024/day14/: Cargo.toml
2024/day14/src/: main.rs
2024/day15/: Cargo.toml
2024/day15/src/: main.rs
2024/inputs/day04/: test_1.txt  test_2.txt
2024/inputs/day05/: real_p1.txt  real_p2.txt
2024/inputs/day07/: real.txt  test.txt
2024/inputs/day08/: debug1.txt  debug2.txt  debug3.txt
2024/inputs/day13/: test1.txt
a12_21_30/: Cargo.toml
a22_01_01/: Cargo.toml
a22_01_09/: Cargo.toml
a22_01_13/: main.go
(+54 files in other folders)
