[workspace]
resolver = "2"
members = [
    "aoc",
    "day01",
    "day02", "day03", "day04", "day05",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
aoc = { path = "./aoc"}

arrow = "53.3"
arrow-array = "53.3"
arrow-schema = "53.3"
datafusion = "43.0"
plex = "0.3.1"
tokio = {version = "1", features = ["full"]}
