[workspace]
resolver = "2"
members = [
    "aoc",
    "day01",
    "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10", "day11", "day12", "day13", "day14",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
aoc = { path = "./aoc"}

arrow = "53.3"
criterion = "0.5.1"
arrow-array = "53.3"
arrow-schema = "53.3"
datafusion = "43.0"
futures = "0.3.31"
itertools = "0.9.0"
plex = "0.3.1"
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"

